# libfs

./: .gitmodules  CMakeLists.txt  README.md  package.json
include/: fs.h
src/: access.c  attr.c  chmod.c  close.c  lock.c  merge.c  mkdir.c  open.c  platform.h  read-batch.c  read.c  realpath.c  rename.c  rmdir.c  shared.c  sparse.c  stat.c  swap.c  symlink.c  trim.c  truncate.c  try-lock.c  unlink.c  unlock.c  write-batch.c  write.c
src/linux/: attr.c  lock.c  swap.c  trim.c  try-lock.c  unlock.c
src/mac/: attr.c  lock.c  swap.c  trim.c  try-lock.c  unlock.c
src/unix/: lock.c  sparse.c
src/win/: attr.c  lock.c  nt.h  sparse.c  swap.c  trim.c  try-lock.c  unlock.c
test/: CMakeLists.txt  attr-get.c  attr-list.c  merge-onto-missing.c  merge.c  mkdir-rmdir-recursive.c  mkdir-rmdir.c  open-close.c  read-batch.c  read.c  stat.c  symlink.c
